# pi_curves

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: amount.rs  bezier.rs  hermite.rs  lib.rs
src/curve/: frame.rs  frame_curve.rs  mod.rs
src/curve/curves/: cubic_bezier_curve.rs  cubic_splice.rs  easing_curve.rs  frames.rs  minmax_curve.rs  mod.rs
src/easing/: function.rs  mod.rs
src/steps/: mod.rs
tests/: curve.rs  test.rs
