[package]
name = "pi_curves"
version = "0.1.0"
authors = ["baip <baip@gmail.com>"]
edition = "2021"
description = "Curve Calculation function library with simple dependencies."
# repository = "https://github.com/GaiaWorld/pi_curves.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "curves"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nalgebra = "0.31"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"], option=true }